[package]
name = "mello"
description = "A small toolbox for fast web api prototyping"
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
argon2 = "0.5.3"
base64ct = "1.6.0"
blake2 = "0.10.6"
hmac = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
sha2 = "0.10.8"
tracing = "0.1.40"
zeroize = { version = "1.7.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bytes = "1.6.0"
cookie = "0.18.1"
heapless = "0.8.0"
http = "1.1.0"
hyper = { version = "1.2.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
opentelemetry = { version = "0.22.0", default-features = false, features = [
  "metrics",
] }
opentelemetry-prometheus = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", default-features = false, features = [
  "metrics",
] }
parking_lot = "0.12.1"
pin-project-lite = "0.2.14"
prometheus = { version = "0.13.3", default-features = false }
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
slab = "0.4.9"
thread_local = "1.1.8"
tokio = { version = "1.37.0", features = ["io-util", "net", "sync", "rt"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-opentelemetry = { version = "0.23.0", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
  "parking_lot",
  "time",
  "tracing-log",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }
lol_alloc = "0.4.1"
wasm-bindgen = "0.2.92"

[dev-dependencies]
claym = "0.5.1"
tower = { version = "0.4.13", features = ["util"] }
tokio = { version = "1.37.0", features = ["macros"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
