[workspace]
resolver = "2"
members = [".", "mello-core", "mello-kv"]

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
mello-core = { path = "./mello-core" }
mello-kv = { path = "./mello-kv" }

argon2 = "0.5.3"
base64ct = "1.6.0"
blake2 = "0.10.6"
claym = "0.5.1"
getrandom = "0.2.14"
hmac = "0.12.1"
lol_alloc = "0.4.1"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rusqlite = "0.31.0"
serde = "1.0.198"
serde_json = "1.0.116"
sha2 = "0.10.8"
thread_local = "1.1.8"
time = "0.3.36"
wasm-bindgen = "0.2.92"
zeroize = "1.7.0"

[package]
name = "mello"
description = "A small toolbox for fast web api prototyping"
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
mello-core.workspace = true

base64ct = "1.6.0"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
sha2 = "0.10.8"
tokio-postgres-rustls = "0.12.0"
tracing = "0.1.40"
zeroize = { version = "1.7.0", features = ["derive"] }
bytes = "1.6.0"
cookie = "0.18.1"
ed25519-dalek = "2.1.1"
heapless = "0.8.0"
http = "1.1.0"
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
opentelemetry = { version = "0.22.0", default-features = false, features = [
    "metrics",
] }
opentelemetry-prometheus = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", default-features = false, features = [
    "metrics",
] }
parking_lot = "0.12.1"
pin-project-lite = "0.2.14"
prometheus = { version = "0.13.3", default-features = false }
serde_json = "1.0.116"
slab = "0.4.9"
tokio = { version = "1.37.0", features = ["io-util", "net", "sync", "rt"] }
tokio-postgres = "0.7.10"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-opentelemetry = { version = "0.23.0", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "parking_lot",
    "time",
    "tracing-log",
] }

[dev-dependencies]
claym = "0.5.1"
mello-core = { workspace = true, features = ["mock-time"] }
tokio = { version = "1.37.0", features = ["macros"] }
tower = { version = "0.4.13", features = ["util"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
