[workspace]
resolver = "2"
members = ["mello-core", "mello-http", "mello-kv", "mello-pg", "mello-trace"]

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
mello-core = { path = "./mello-core" }
mello-http = { path = "./mello-http" }
mello-kv = { path = "./mello-kv" }
mello-trace = { path = "./mello-trace" }

argon2 = "0.5.3"
base64ct = "1.6.0"
blake2 = "0.10.6"
bytes = "1.6.0"
claym = "0.5.1"
cookie = "0.18.1"
ed25519-dalek = "2.1.1"
getrandom = "0.2.14"
heapless = "0.8.0"
hmac = "0.12.1"
http = "1.1.0"
hyper = "1.3.1"
hyper-util = "0.1.3"
lol_alloc = "0.4.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"
opentelemetry = "0.22.0"
opentelemetry-prometheus = "0.15.0"
opentelemetry_sdk = "0.22.1"
parking_lot = "0.12.1"
pin-project-lite = "0.2.14"
prometheus = "0.13.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rusqlite = "0.31.0"
rustls = { version = "0.23.4", default-features = false }
rustls-native-certs = "0.7.0"
serde = "1.0.198"
serde_json = "1.0.116"
serde_with = "3.7.0"
sha2 = "0.10.8"
slab = "0.4.9"
thread_local = "1.1.8"
time = "0.3.36"
tokio = "1.37.0"
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.12.0"
tower = "0.4.13"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
wasm-bindgen = "0.2.92"
zeroize = "1.7.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
