[package]
name = "mello-core"
description = "Mello's core package"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
argon2 = "0.5.3"
base64ct = "1.6.0"
blake2 = "0.10.6"
hmac = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
sha2 = "0.10.8"
time = "0.3.36"
zeroize = { version = "1.7.0", features = ["derive"] }

[dev-dependencies]
claym = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }
lol_alloc = "0.4.1"
wasm-bindgen = "0.2.92"

[features]
mock-time = []
