[package]
name = "mello-core"
description = "Mello's core package"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
argon2.workspace = true
base64ct.workspace = true
blake2.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_pcg.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
claym.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
lol_alloc.workspace = true
wasm-bindgen.workspace = true

[features]
mock-time = []
