[package]
name = "mello-kv"
description = "Simple key-value storage based on SQLite"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parking_lot = "0.12.1"
rusqlite = "0.31.0"
serde = "1.0.198"
serde_json = "1.0.116"
thread_local = "1.1.8"

[dev-dependencies]
claym = "0.5.1"
