[package]
name = "mello-kv"
description = "Simple key-value storage based on SQLite"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parking_lot.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thread_local.workspace = true

[dev-dependencies]
claym.workspace = true
