[package]
name = "mello-trace"
description = "Tracing utilities"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
heapless.workspace = true
http.workspace = true
once_cell.workspace = true
opentelemetry.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry_sdk.workspace = true
pin-project-lite.workspace = true
prometheus.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
tower-layer.workspace = true
tower-service.workspace = true
tracing.workspace = true
tracing-appender = { workspace = true, features = ["parking_lot"] }
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "parking_lot",
    "time",
    "tracing-log",
] }
